--- a/infinord/about/index.html
+++ b/infinord/about/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>About</h1>
+    <p>Infinord is a word-guessing game where you keep playing until you fail to guess a word. Keep going as far as you can, and use Hints or Bombs if you need help along the way.</p>
 </body>
 
 </html>
