--- a/infinord/privacy-policy/index.html
+++ b/infinord/privacy-policy/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Privacy Policy</h1>
-    <p>Here is some content.</p>
+    <p>City of Fortune, LLC does not store or sell any information through Infinord, nor does Infinord track you. The only information saved is game stats saved to the databased.</p>
 </body>
 
 </html>
