bacteria game start

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>This is the portfolio page for @rubencubed</p>
     <ul>
         <li><a href="falling-rain">Falling Rain</a></li>
+        <li><a href="bacteria">Bacteria Game</a></li>
     </ul>
 </body>
 
