--- a/index.html
+++ b/index.html
@@ -4,15 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RubenCubed</title>
+    <title>@rubencubed</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <h1>RubenCubed</h1>
+    <h1>@rubencubed</h1>
     <p>This is the portfolio page for @rubencubed</p>
-    <ul>
-        <li><a href="falling-rain">Falling Rain</a></li>
-        <li><a href="bacteria">Bacteria Game</a></li>
+    <ul class="card-list">
+        <a class="card-link" href="falling-rain">
+            <li class="card">
+                Falling Rain
+            </li>
+        </a>
+        <a class="card-link" href="bacteria">
+            <li class="card">
+                Bacteria Game
+            </li>
+        </a>
+        <a class="card-link" href="https://twitch.tv/rubencubed">
+            <li class="card">
+                Twitch Stream
+            </li>
+        </a>
     </ul>
 </body>
 
