--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </a>
         <a class="card-link" href="bacteria">
             <li class="card">
-                Bacteria Game
+                Bacteria Communication
             </li>
         </a>
         <a class="card-link" href="https://twitch.tv/rubencubed">
